--- a/configuration.cfg
+++ b/configuration.cfg
@@ -1,3 +1,5 @@
 [file]
 output_path = C:\Users\ksmit\PycharmProjects\xmlgenerator\xml_generator\xmlFIles\xmloutput\
 input_path = C:\Users\ksmit\PycharmProjects\xmlgenerator\xml_generator\xmlFIles\
+complete_path = C:\Users\ksmit\PycharmProjects\xmlgenerator\xml_generator\xmlFIles\complete
+fail_path = C:\Users\ksmit\PycharmProjects\xmlgenerator\xml_generator\xmlFIles\fail
